Added and fixed tests